--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.okhttp3:okhttp:(insert latest version)'
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.0.3'
 
     testImplementation 'junit:junit:4.12'
     implementation 'com.facebook.fresco:fresco:1.11.0'
