--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar">
+                android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
         <activity
                 android:name=".SplashActivity"
@@ -38,6 +38,7 @@
         <activity android:name=".EmployeeActivity"/>
         <activity android:name=".LoginScreen"/>
         <activity android:name=".Admin.LoggedInAs"/>
+        <activity android:name=".Admin.OngoingProjects"/>
     </application>
 
 </manifest>
