--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
+            android:name=".Networking.VolleySingleton"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -46,6 +47,9 @@
                   android:theme="@style/Theme.Transparent"/>
         <activity android:name=".UI.OptionsViewerAdapter"
                   android:theme="@style/Theme.Transparent"/>
+        <activity android:name=".Admin.EditProjectasAdmin"/>
+        <activity android:name=".Admin.ClientDetails.AddNewProjectasAdmin"/>
     </application>
+
 
 </manifest>
