--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
                 android:label="@string/title_activity_settings">
         </activity>
         <activity android:name=".Admin.BurgerMenu.Profile"/>
+        <activity android:name=".Admin.ClientDetails.EditClientDetail"/>
     </application>
 
 </manifest>
