--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.1'
     implementation 'pub.devrel:easypermissions:0.2.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 
     testImplementation 'junit:junit:4.12'
