--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera"
+                  android:required="true" />
+
 
     <application
             android:name=".Networking.VolleySingleton"
@@ -15,6 +18,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
+        <provider
+                android:name="android.support.v4.content.FileProvider"
+                android:authorities="com.example.android.fileprovider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths"></meta-data>
+        </provider>
+
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
@@ -70,7 +84,7 @@
         <activity android:name=".UI.UploadActivity"/>
         <activity android:name=".Admin.ClientDetails.AddNewProjectDetails"/>
         <activity android:name=".Employee.EmployeeDashboard"/>
-        <activity android:name=".Employee.Chatbox"/>
+        <activity android:name=".Chats.Chatbox"/>
     </application>
 
 </manifest>
