--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'pub.devrel:easypermissions:0.2.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
 
-
+    implementation 'id.zelory:compressor:2.1.0'
 
     testImplementation 'junit:junit:4.12'
     implementation 'com.facebook.fresco:fresco:1.11.0'
