--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
             android:name=".Networking.VolleySingleton"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
@@ -37,17 +37,16 @@
         <activity
                 android:name=".SplashActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
-                android:icon="@mipmap/ic_launcher"
+                android:icon="@drawable/ic_launcher"
                 android:label="@string/app_name"
                 android:roundIcon="@mipmap/ic_launcher_round"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
             <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER"/>
-
                 <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ClientActivity"
+        <activity android:name=".Client.ClientActivity"
                   android:theme="@style/Theme.Transparent"/>
         <activity
                 android:name=".LoginActivity"
@@ -70,11 +69,7 @@
         <activity android:name=".Admin.AddNewProjectasAdmin"/>
         <activity android:name=".Admin.ClientDetails.ClientDetailsData"/>
         <activity android:name=".Admin.BurgerMenu.AddorRemoveUser"/>
-        <activity
-                android:name=".Main2Activity"
-                android:label="@string/title_activity_main2"
-                android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+
         <activity
                 android:name=".SettingsActivity"
                 android:label="@string/title_activity_settings">
@@ -82,12 +77,9 @@
         <activity android:name=".Admin.BurgerMenu.Profile"/>
         <activity android:name=".Admin.ClientDetails.EditClientDetail"/>
         <activity android:name=".Employee.EditTeamActivity"/>
-        <activity android:name=".UI.UploadActivity"/>
         <activity android:name=".Admin.ClientDetails.AddNewProjectDetails"/>
         <activity android:name=".Employee.EmployeeDashboard"/>
         <activity android:name=".Chats.Chatbox"/>
-        <activity android:name=".Chats.Cam"/>
-        <activity android:name="Cam"/>
 
     </application>
 
